AMParser.java
// Generated from AM.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, INT_TYPE=2, BOOL_TYPE=3, STRING_TYPE=4, ARRAY=5, OF=6, READ=7, 
		WRITE=8, IF=9, THEN=10, ELSE=11, WHILE=12, DO=13, EXIT=14, VAR=15, BODY=16, 
		BEGIN=17, END=18, AND=19, OR=20, NOT=21, TRUE=22, FALSE=23, IDENTIFIERS=24, 
		WHITESPACES=25, COMMENTS=26, STR=27, NUM=28, CONSTANTS=29, MUL=30, DIV=31, 
		MOD=32, ADD=33, MIN=34, EQUAL=35, NEQUAL=36, LESS=37, MORETHAN=38, LEOREQ=39, 
		MOOREQ=40, CONC=41, ASSIGN=42, LP=43, RP=44, LB=45, RB=46, SEMICOLON=47, 
		COLON=48, COMMA=49, CHARSET=50;
	public static final int
		RULE_program = 0, RULE_program_structure = 1, RULE_head = 2, RULE_declaration = 3, 
		RULE_bod = 4, RULE_dec = 5, RULE_type = 6, RULE_block = 7, RULE_stat = 8, 
		RULE_assignment = 9, RULE_input = 10, RULE_output = 11, RULE_ifel = 12, 
		RULE_loop = 13, RULE_expr = 14;
	public static final String[] ruleNames = {
		"program", "program_structure", "head", "declaration", "bod", "dec", "type", 
		"block", "stat", "assignment", "input", "output", "ifel", "loop", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'PROGRAM'", "'INTEGER'", "'BOOLEAN'", "'STRING'", "'ARRAY'", "'OF'", 
		"'READ'", "'WRITE'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", "'EXIT'", 
		"'VAR'", "'BODY'", "'BEGIN'", "'END'", "'AND'", "'OR'", "'NOT'", "'TRUE'", 
		"'FALSE'", null, null, null, null, null, null, "'*'", "'/'", "'%'", "'+'", 
		"'-'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'|'", "':='", "'('", 
		"')'", "'['", "']'", "';'", "':'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PROGRAM", "INT_TYPE", "BOOL_TYPE", "STRING_TYPE", "ARRAY", "OF", 
		"READ", "WRITE", "IF", "THEN", "ELSE", "WHILE", "DO", "EXIT", "VAR", "BODY", 
		"BEGIN", "END", "AND", "OR", "NOT", "TRUE", "FALSE", "IDENTIFIERS", "WHITESPACES", 
		"COMMENTS", "STR", "NUM", "CONSTANTS", "MUL", "DIV", "MOD", "ADD", "MIN", 
		"EQUAL", "NEQUAL", "LESS", "MORETHAN", "LEOREQ", "MOOREQ", "CONC", "ASSIGN", 
		"LP", "RP", "LB", "RB", "SEMICOLON", "COLON", "COMMA", "CHARSET"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program_structureContext program_structure() {
			return getRuleContext(Program_structureContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			program_structure();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_structureContext extends ParserRuleContext {
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public BodContext bod() {
			return getRuleContext(BodContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Program_structureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterProgram_structure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitProgram_structure(this);
		}
	}

	public final Program_structureContext program_structure() throws RecognitionException {
		Program_structureContext _localctx = new Program_structureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_structure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			head();
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(33);
				declaration();
				}
			}

			setState(36);
			bod();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(AMParser.PROGRAM, 0); }
		public TerminalNode IDENTIFIERS() { return getToken(AMParser.IDENTIFIERS, 0); }
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitHead(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_head);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(PROGRAM);
			setState(39);
			match(IDENTIFIERS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(AMParser.VAR, 0); }
		public List<DecContext> dec() {
			return getRuleContexts(DecContext.class);
		}
		public DecContext dec(int i) {
			return getRuleContext(DecContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(AMParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(AMParser.SEMICOLON, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(VAR);
			setState(47);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(42);
					dec();
					setState(43);
					match(SEMICOLON);
					}
					} 
				}
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(50);
			dec();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodContext extends ParserRuleContext {
		public TerminalNode BODY() { return getToken(AMParser.BODY, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public BodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterBod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitBod(this);
		}
	}

	public final BodContext bod() throws RecognitionException {
		BodContext _localctx = new BodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(BODY);
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN:
				{
				setState(53);
				block();
				}
				break;
			case READ:
			case WRITE:
			case IF:
			case WHILE:
			case EXIT:
			case NOT:
			case TRUE:
			case FALSE:
			case IDENTIFIERS:
			case STR:
			case NUM:
			case MIN:
			case LP:
				{
				setState(54);
				stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIERS() { return getTokens(AMParser.IDENTIFIERS); }
		public TerminalNode IDENTIFIERS(int i) {
			return getToken(AMParser.IDENTIFIERS, i);
		}
		public TerminalNode COLON() { return getToken(AMParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(AMParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AMParser.COMMA, i);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitDec(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(IDENTIFIERS);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(58);
				match(COMMA);
				setState(59);
				match(IDENTIFIERS);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(COLON);
			setState(66);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT_TYPE() { return getToken(AMParser.INT_TYPE, 0); }
		public TerminalNode BOOL_TYPE() { return getToken(AMParser.BOOL_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(AMParser.STRING_TYPE, 0); }
		public TerminalNode ARRAY() { return getToken(AMParser.ARRAY, 0); }
		public TerminalNode LB() { return getToken(AMParser.LB, 0); }
		public TerminalNode NUM() { return getToken(AMParser.NUM, 0); }
		public TerminalNode RB() { return getToken(AMParser.RB, 0); }
		public TerminalNode OF() { return getToken(AMParser.OF, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(INT_TYPE);
				}
				break;
			case BOOL_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				match(BOOL_TYPE);
				}
				break;
			case STRING_TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				match(STRING_TYPE);
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				match(ARRAY);
				setState(72);
				match(LB);
				setState(73);
				match(NUM);
				setState(74);
				match(RB);
				setState(75);
				match(OF);
				setState(76);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(AMParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(AMParser.END, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(AMParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(AMParser.SEMICOLON, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(BEGIN);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << READ) | (1L << WRITE) | (1L << IF) | (1L << WHILE) | (1L << EXIT) | (1L << BEGIN) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << IDENTIFIERS) | (1L << STR) | (1L << NUM) | (1L << MIN) | (1L << LP))) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(82);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case READ:
						case WRITE:
						case IF:
						case WHILE:
						case EXIT:
						case NOT:
						case TRUE:
						case FALSE:
						case IDENTIFIERS:
						case STR:
						case NUM:
						case MIN:
						case LP:
							{
							setState(80);
							stat();
							}
							break;
						case BEGIN:
							{
							setState(81);
							block();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(84);
						match(SEMICOLON);
						}
						} 
					}
					setState(90);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(93);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case READ:
				case WRITE:
				case IF:
				case WHILE:
				case EXIT:
				case NOT:
				case TRUE:
				case FALSE:
				case IDENTIFIERS:
				case STR:
				case NUM:
				case MIN:
				case LP:
					{
					setState(91);
					stat();
					}
					break;
				case BEGIN:
					{
					setState(92);
					block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			setState(97);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public IfelContext ifel() {
			return getRuleContext(IfelContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public TerminalNode EXIT() { return getToken(AMParser.EXIT, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stat);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
			case TRUE:
			case FALSE:
			case IDENTIFIERS:
			case STR:
			case NUM:
			case MIN:
			case LP:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				assignment();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				input();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				output();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				ifel();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				loop();
				}
				break;
			case EXIT:
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				match(EXIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(AMParser.ASSIGN, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			expr(0);
			setState(108);
			match(ASSIGN);
			setState(109);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(AMParser.READ, 0); }
		public TerminalNode LP() { return getToken(AMParser.LP, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RP() { return getToken(AMParser.RP, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AMParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AMParser.COMMA, i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_input);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(READ);
			setState(112);
			match(LP);
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(113);
					expr(0);
					setState(114);
					match(COMMA);
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(121);
			expr(0);
			setState(122);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputContext extends ParserRuleContext {
		public TerminalNode WRITE() { return getToken(AMParser.WRITE, 0); }
		public TerminalNode LP() { return getToken(AMParser.LP, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RP() { return getToken(AMParser.RP, 0); }
		public TerminalNode COMMA() { return getToken(AMParser.COMMA, 0); }
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_output);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(WRITE);
			setState(125);
			match(LP);
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(126);
				expr(0);
				setState(127);
				match(COMMA);
				}
				break;
			}
			setState(131);
			expr(0);
			setState(132);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfelContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(AMParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode THEN() { return getToken(AMParser.THEN, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(AMParser.ELSE, 0); }
		public IfelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).enterIfel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AMListener ) ((AMListener)listener).exitIfel(this);
		}
	}

	public final IfelContext ifel() throws RecognitionException {
		IfelContext _localctx = new IfelContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ifel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(IF);
			setState(135);
			expr(0);
			setState(136);
			match(THEN);
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READ:
			case WRITE:
			case IF:
			case WHILE:
			case EXIT:
			case NOT:
			case TRUE:
			case FALSE:
			case IDENTIFIERS:
			case STR:
			case NUM:
			case MIN:
			case LP:
				{
				setState(137);
				stat();
				}
				break;
			case BEGIN:
				{
				setState(138);
				block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(141);
				match(ELSE);
				setState(144);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case READ:
				case WRITE:
				case IF:
				case WHILE:
				case EXIT:
				case NOT:
				case TRUE:
				case FALSE:
				case IDENTIFIERS:
				case STR:
				case NUM:
				case MIN:
				case LP:
					{
					setState(142);
					stat();
					}
					break;
				case BEGIN:
					{
					setState(143);
					block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(AMParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
